--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "color-convert": "^3.1.3",
+    "cors": "^2.8.5",
     "express": "^5.1.0"
   }
 }
